App colors stuff

--- a/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/App.xaml
+++ b/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/App.xaml
@@ -36,6 +36,8 @@
             <converter:AppStimmerAttachmentTypeToViewEnabledConverter x:Key="AppStimmerAttachmentTypeToViewEnabledConverter" />
             <converter:HexStringToColorConverter x:Key="HexStringToColorConverter" />
             <converter:BooleanConverter x:Key="BooleanConverter" />
+            <converter:ColorToColorChannelConverter x:Key="ColorToColorChannelConverter" />
+            <converter:ColorChannelsToColorConverter x:Key="ColorChannelsToColorConverter" />
         </ResourceDictionary>
     </Application.Resources>
 </Application>
