Colors dev - Replaced TabbedPage with custom Tabs solution, due to colorization issues with the Tabs

--- a/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/App.xaml
+++ b/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/App.xaml
@@ -38,6 +38,8 @@
             <converter:BooleanConverter x:Key="BooleanConverter" />
             <converter:ColorToColorChannelConverter x:Key="ColorToColorChannelConverter" />
             <converter:ColorChannelsToColorConverter x:Key="ColorChannelsToColorConverter" />
+            <converter:AppStimmerEditorDisplayTypeToViewVisibilityConverter x:Key="AppStimmerEditorDisplayTypeToViewVisibilityConverter" />
+            <converter:ÁppStimmerEditorDisplayTypeToOpacityConverter x:Key="ÁppStimmerEditorDisplayTypeToOpacityConverter" />
         </ResourceDictionary>
     </Application.Resources>
 </Application>
