--- a/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/Views/ContentViews/AppStimmerEditor/AppStimmerEditorOverviewView.xaml
+++ b/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/Views/ContentViews/AppStimmerEditor/AppStimmerEditorOverviewView.xaml
@@ -5,10 +5,10 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:appStimmerEditor="clr-namespace:MSO.StimmApp.Views.ContentViews.AppStimmerEditor;assembly=MSO.StimmApp">
     <ContentView.Content>
-        <StackLayout>
+        <Grid>
             <appStimmerEditor:AppStimmerEditorHeader />
 
             <Grid />
-        </StackLayout>
+        </Grid>
     </ContentView.Content>
 </ContentView>
