Colors update. Added svg images.

--- a/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/App.xaml
+++ b/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/App.xaml
@@ -40,6 +40,7 @@
             <converter:ColorChannelsToColorConverter x:Key="ColorChannelsToColorConverter" />
             <converter:AppStimmerEditorDisplayTypeToViewVisibilityConverter x:Key="AppStimmerEditorDisplayTypeToViewVisibilityConverter" />
             <converter:ÁppStimmerEditorDisplayTypeToOpacityConverter x:Key="ÁppStimmerEditorDisplayTypeToOpacityConverter" />
+            <converter:ImageToSvgSourceConverter x:Key="ImageToSvgSourceConverter" />
         </ResourceDictionary>
     </Application.Resources>
 </Application>
