--- a/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/MenuPageMaster.xaml
+++ b/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/MenuPageMaster.xaml
@@ -4,6 +4,8 @@
     xmlns="http://xamarin.com/schemas/2014/forms"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:contentViews="clr-namespace:MSO.StimmApp.Views.ContentViews;assembly=MSO.StimmApp"
+    xmlns:elements="clr-namespace:MSO.StimmApp.Elements;assembly=MSO.StimmApp"
+    xmlns:stimmApp="clr-namespace:MSO.StimmApp;assembly=MSO.StimmApp"
     Title="Master"
     Padding="0,23,0,0"
     BackgroundColor="Transparent"
@@ -30,9 +32,10 @@
                             Spacing="20"
                             VerticalOptions="FillAndExpand">
 
-                            <Image
+                            <elements:TintedSvgCachedImage
                                 HeightRequest="30"
-                                Source="{Binding Icon, Converter={StaticResource ImageSourceConverter}}"
+                                Source="{Binding Icon, Converter={StaticResource ImageToSvgSourceConverter}}"
+                                TintColor="{Binding Source={x:Static stimmApp:App.Settings}, Path=AppPrimaryColor}"
                                 VerticalOptions="Center"
                                 WidthRequest="30" />
 
