--- a/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/Views/ContentViews/AppStimmerEditor/Attachments/AddAttachmentView.xaml
+++ b/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/Views/ContentViews/AppStimmerEditor/Attachments/AddAttachmentView.xaml
@@ -4,13 +4,16 @@
     xmlns="http://xamarin.com/schemas/2014/forms"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:controls="clr-namespace:MSO.StimmApp.Controls;assembly=MSO.StimmApp"
+    xmlns:elements="clr-namespace:MSO.StimmApp.Elements;assembly=MSO.StimmApp"
     xmlns:enums="clr-namespace:MSO.StimmApp.Core.Enums;assembly=MSO.StimmApp.Core"
+    xmlns:forms="clr-namespace:FFImageLoading.Svg.Forms;assembly=FFImageLoading.Svg.Forms"
     xmlns:stimmApp="clr-namespace:MSO.StimmApp;assembly=MSO.StimmApp">
     <ContentView.Content>
         <Grid Padding="15,15,15,15">
             <Grid.RowDefinitions>
-                <RowDefinition Height="1*" />
-                <RowDefinition Height="1*" />
+                <RowDefinition Height="10*" />
+                <RowDefinition Height="45*" />
+                <RowDefinition Height="45*" />
             </Grid.RowDefinitions>
 
             <Grid.ColumnDefinitions>
@@ -18,45 +21,58 @@
                 <ColumnDefinition Width="1*" />
                 <ColumnDefinition Width="1*" />
             </Grid.ColumnDefinitions>
+            <elements:TintedSvgCachedImage
+                Grid.Row="0"
+                Grid.Column="2"
+                HeightRequest="20"
+                HorizontalOptions="End"
+                Source="resource://MSO.StimmApp.Resources.Icons.cross.svg"
+                TintColor="DarkGray"
+                VerticalOptions="Start"
+                WidthRequest="20">
+                <forms:SvgCachedImage.GestureRecognizers>
+                    <TapGestureRecognizer Tapped="CancelAddingAttachgmentImageButton_OnTapped" />
+                </forms:SvgCachedImage.GestureRecognizers>
+            </elements:TintedSvgCachedImage>
 
             <controls:AppStimmerAttachmentButton
                 x:Name="AddDocumentButton"
-                Grid.Row="0"
+                Grid.Row="1"
                 Grid.Column="0"
                 AttachmentType="{x:Static enums:AttachmentType.Document}"
                 Description="Dokument"
                 IconSource="MSO.StimmApp.Resources.Icons.document_circle.scale-100.png" />
             <controls:AppStimmerAttachmentButton
                 x:Name="AddCameraPictureButton"
-                Grid.Row="0"
+                Grid.Row="1"
                 Grid.Column="1"
                 AttachmentType="{x:Static enums:AttachmentType.Camera}"
                 Description="Kamera"
                 IconSource="MSO.StimmApp.Resources.Icons.camera_circle.scale-100.png" />
             <controls:AppStimmerAttachmentButton
                 x:Name="AddGalleryPictureButton"
-                Grid.Row="0"
+                Grid.Row="1"
                 Grid.Column="2"
                 AttachmentType="{x:Static enums:AttachmentType.Gallery}"
                 Description="Galerie"
                 IconSource="MSO.StimmApp.Resources.Icons.gallery_circle.scale-100.png" />
             <controls:AppStimmerAttachmentButton
                 x:Name="AddTextButton"
-                Grid.Row="1"
+                Grid.Row="2"
                 Grid.Column="0"
                 AttachmentType="{x:Static enums:AttachmentType.Text}"
                 Description="Text"
                 IconSource="MSO.StimmApp.Resources.Icons.text_circle.scale-100.png" />
             <controls:AppStimmerAttachmentButton
                 x:Name="AddLocationButton"
-                Grid.Row="1"
+                Grid.Row="2"
                 Grid.Column="1"
                 AttachmentType="{x:Static enums:AttachmentType.Location}"
                 Description="Standort"
                 IconSource="MSO.StimmApp.Resources.Icons.location_circle.scale-100.png" />
             <controls:AppStimmerAttachmentButton
                 x:Name="AddAudioButtonn"
-                Grid.Row="1"
+                Grid.Row="2"
                 Grid.Column="2"
                 AttachmentType="{x:Static enums:AttachmentType.Audio}"
                 Description="Audio"
