--- a/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/Views/ContentViews/AppStimmerEditor/AppStimmerEditorDetailsView.xaml
+++ b/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/Views/ContentViews/AppStimmerEditor/AppStimmerEditorDetailsView.xaml
@@ -13,17 +13,20 @@
         <Grid>
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto" />
-                <RowDefinition Height="*" />
+                <RowDefinition Height="55*" />
+                <RowDefinition Height="45*" />
             </Grid.RowDefinitions>
 
             <appStimmerEditor:AppStimmerEditorHeader Grid.Row="0" />
             <attachments:AppStimmerAttachmentsListView
                 Grid.Row="1"
+                Grid.RowSpan="2"
                 Margin="15"
                 ItemsSource="{Binding AppStimmer.Attachments}" />
 
             <Grid
                 Grid.Row="1"
+                Grid.RowSpan="2"
                 HorizontalOptions="End"
                 IsVisible="true"
                 VerticalOptions="End">
@@ -42,7 +45,7 @@
                 </elements:TintedSvgCachedImage>
             </Grid>
             <Grid
-                Grid.Row="1"
+                Grid.Row="2"
                 BackgroundColor="White"
                 IsVisible="{Binding IsAddingAttachment}">
                 <attachments:AddAttachmentView />
