--- a/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/Views/Pages/SettingsPage.xaml
+++ b/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/Views/Pages/SettingsPage.xaml
@@ -4,8 +4,10 @@
     xmlns="http://xamarin.com/schemas/2014/forms"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:settings="clr-namespace:MSO.StimmApp.Views.ContentViews.Settings;assembly=MSO.StimmApp"
+    xmlns:stimmApp="clr-namespace:MSO.StimmApp;assembly=MSO.StimmApp"
+    BackgroundColor="{Binding Source={x:Static stimmApp:App.Settings}, Path=SecondaryColor}"
     BindingContext="{Binding Settings, Source={StaticResource Locator}}">
     <ContentPage.Content>
-        <settings:AppColorsSettingsView></settings:AppColorsSettingsView>
+        <settings:AppColorsSettingsView />
     </ContentPage.Content>
 </ContentPage>
