--- a/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/Views/ContentViews/AppStimmers/AppStimmersListView.xaml
+++ b/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/Views/ContentViews/AppStimmers/AppStimmersListView.xaml
@@ -4,6 +4,7 @@
     xmlns="http://xamarin.com/schemas/2014/forms"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:stimmApp="clr-namespace:MSO.StimmApp;assembly=MSO.StimmApp"
+    BackgroundColor="{Binding Source={x:Static stimmApp:App.Settings}, Path=SecondaryColor}"
     BindingContext="{Binding AppStimmers, Source={StaticResource Locator}}"
     HasUnevenRows="true"
     ItemTapped="AppStimmersListView_OnItemTapped"
@@ -20,7 +21,7 @@
                             AbsoluteLayout.LayoutFlags="All">
 
                             <StackLayout
-                                BackgroundColor="White"
+                                BackgroundColor="{Binding Source={x:Static stimmApp:App.Settings}, Path=AppStimmersItemColor}"
                                 Orientation="Vertical"
                                 Spacing="0"
                                 VerticalOptions="FillAndExpand">
