--- a/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/Views/ContentViews/AppStimmerEditor/Attachments/AddAttachmentView.xaml
+++ b/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/Views/ContentViews/AppStimmerEditor/Attachments/AddAttachmentView.xaml
@@ -27,7 +27,7 @@
                 HeightRequest="20"
                 HorizontalOptions="End"
                 Source="resource://MSO.StimmApp.Resources.Icons.cross.svg"
-                TintColor="DarkGray"
+                TintColor="{Binding Source={x:Static stimmApp:App.Settings}, Path=SimpleControlsColor}"
                 VerticalOptions="Start"
                 WidthRequest="20">
                 <forms:SvgCachedImage.GestureRecognizers>
