--- a/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/Elements/ColoredNavigationPage.xaml
+++ b/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/Elements/ColoredNavigationPage.xaml
@@ -4,4 +4,4 @@
     xmlns="http://xamarin.com/schemas/2014/forms"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:stimmApp="clr-namespace:MSO.StimmApp;assembly=MSO.StimmApp"
-    BarBackgroundColor="{Binding Source={x:Static stimmApp:App.Settings}, Path=AppPrimaryColor}" />
+    BarBackgroundColor="{Binding Source={x:Static stimmApp:App.Settings}, Path=AppColors.AppPrimaryColor}" />
